operators/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
    app.kubernetes.io/name: argocd
    app.kubernetes.io/instance: argocd-dev
    app.kubernetes.io/component: gitops-controller
    app.kubernetes.io/part-of: platform
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
